Change cdn constants